--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -11,3 +11,5 @@ target_link_libraries(client_test
 target_include_directories(client_test PUBLIC
     ${PROJECT_SOURCE_DIR}/iroha-cli
     )
+
+add_subdirectory(pipeline)
