Move remove_all method to libs/common
Signed-off-by: Fyodor Muratov <muratovfyodor@yandex.ru>

--- a/test/module/irohad/main/CMakeLists.txt
+++ b/test/module/irohad/main/CMakeLists.txt
@@ -17,4 +17,5 @@ addtest(genesis_block_processor_test
 target_link_libraries(genesis_block_processor_test
   genesis_block_server
   crypto
+  libs_common
   )
