Add test storage implementation:  - implement drop method  - Rework internal interface of storageImpl (move to protected block useful fields)
Signed-off-by: Fyodor Muratov <muratovfyodor@yandex.ru>

--- a/irohad/ametsuchi/CMakeLists.txt
+++ b/irohad/ametsuchi/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(ametsuchi
     impl/temporary_wsv_impl.cpp
     impl/mutable_storage_impl.cpp
 
+    impl/test_storage_impl.cpp
+
     impl/postgres_wsv_query.cpp
     impl/postgres_wsv_command.cpp
     impl/peer_query_wsv.cpp
@@ -17,4 +19,5 @@ target_link_libraries(ametsuchi
     pqxx
     cpp_redis
     model
+    libs_common
     )
