Implement block generator: - Add block, transaction, command generators - Add signature generation with seed - Refactor libs generator - Remove unused imports - Add to iroha-cli genesis block generation
Signed-off-by: grimadas <bulat.nasrulin@gmail.com>

--- a/irohad/model/CMakeLists.txt
+++ b/irohad/model/CMakeLists.txt
@@ -45,3 +45,5 @@ target_include_directories(model_registrations INTERFACE
 target_link_libraries(model_registrations INTERFACE
     model
     )
+
+add_subdirectory(generators)
