--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(timer)
 add_subdirectory(logger)
 add_subdirectory(torii_utils)
 add_subdirectory(ip_tools)
+add_subdirectory(generator)
