--- a/test/module/irohad/model/CMakeLists.txt
+++ b/test/module/irohad/model/CMakeLists.txt
@@ -54,6 +54,7 @@ target_link_libraries(model_operators_test
 addtest(command_validate_execute_test command_validate_execute_test.cpp)
 target_link_libraries(command_validate_execute_test
     model
+    ametsuchi
     )
 
 addtest(json_command_converter_test converters/json_commands_test.cpp)
