--- a/test/module/irohad/ordering/CMakeLists.txt
+++ b/test/module/irohad/ordering/CMakeLists.txt
@@ -15,6 +15,7 @@
 addtest(ordering_service_test ordering_service_test.cpp)
 target_link_libraries(ordering_service_test
     ordering_service
+    ametsuchi
     )
 
 addtest(ordering_gate_test ordering_gate_test.cpp)
@@ -25,4 +26,5 @@ target_link_libraries(ordering_gate_test
 addtest(ordering_gate_service_test ordering_gate_service_test.cpp)
 target_link_libraries(ordering_gate_service_test
     ordering_service
+    ametsuchi
     )
