--- a/test/module/irohad/synchronizer/CMakeLists.txt
+++ b/test/module/irohad/synchronizer/CMakeLists.txt
@@ -1,10 +1,7 @@
-set(CMAKE_BUILD_TYPE Debug)
-
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test_bin)
-
 addtest(synchronizer_test synchronizer_test.cpp)
 target_link_libraries(synchronizer_test
       synchronizer
+      ametsuchi
       )
 
 
