--- a/test/module/irohad/torii/CMakeLists.txt
+++ b/test/module/irohad/torii/CMakeLists.txt
@@ -17,18 +17,20 @@ add_subdirectory(processor)
 # command service test
 addtest(torii_service_test torii_service_test.cpp)
 target_link_libraries(torii_service_test
-  torii_service
-  command_client
-  query_client
-  server_runner
-  processors
-  )
+    torii_service
+    command_client
+    query_client
+    server_runner
+    processors
+    ametsuchi
+    )
 
 addtest(torii_queries_test torii_queries_test.cpp)
 target_link_libraries(torii_queries_test
-        torii_service
-        command_client
-        query_client
-        server_runner
-        processors
-        )
+    torii_service
+    command_client
+    query_client
+    server_runner
+    processors
+    ametsuchi
+    )
