--- a/test/module/irohad/CMakeLists.txt
+++ b/test/module/irohad/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(synchronizer)
 add_subdirectory(simulator)
 add_subdirectory(main)
 add_subdirectory(ordering)
+add_subdirectory(network)
