Fix review issues
Signed-off-by: Fyodor Muratov <muratovfyodor@yandex.ru>

--- a/test/module/irohad/ametsuchi/CMakeLists.txt
+++ b/test/module/irohad/ametsuchi/CMakeLists.txt
@@ -1,15 +1,18 @@
 addtest(ametsuchi_test ametsuchi_test.cpp)
 target_link_libraries(ametsuchi_test
     ametsuchi
+    libs_common
     )
 
 addtest(flat_file_test flat_file_test.cpp)
 target_link_libraries(flat_file_test
     ametsuchi
+    libs_common
     )
 
 addtest(testing_storage_test testing_storage_test.cpp)
 target_link_libraries(testing_storage_test
     ametsuchi
     test_block_generator
+    libs_common
     )
