--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(logger)
 add_subdirectory(torii_utils)
 add_subdirectory(ip_tools)
 add_subdirectory(generator)
+add_subdirectory(parser)
