Rename yac_storage_test with yac_block_storage_test; Add fixture for it; Add tests for new api
Signed-off-by: Fyodor Muratov <muratovfyodor@yandex.ru>

--- a/test/module/irohad/consensus/yac/CMakeLists.txt
+++ b/test/module/irohad/consensus/yac/CMakeLists.txt
@@ -15,8 +15,8 @@ target_link_libraries(yac_sunny_day_test
     model
     )
 
-addtest(yac_storage_test yac_storage_test.cpp)
-target_link_libraries(yac_storage_test
+addtest(yac_block_storage_test yac_block_storage_test.cpp)
+target_link_libraries(yac_block_storage_test
     yac
     )
 
