Add yac proposal storage tests:  - for check uniqueness of votes  - for commit case  - for reject case
Signed-off-by: Fyodor Muratov <muratovfyodor@yandex.ru>

--- a/test/module/irohad/consensus/yac/CMakeLists.txt
+++ b/test/module/irohad/consensus/yac/CMakeLists.txt
@@ -20,6 +20,11 @@ target_link_libraries(yac_block_storage_test
     yac
     )
 
+addtest(yac_proposal_storage_test yac_proposal_storage_test.cpp)
+target_link_libraries(yac_proposal_storage_test
+    yac
+    )
+
 addtest(yac_timer_test timer_test.cpp)
 target_link_libraries(yac_timer_test
     yac
