Refactor interactive cli interface:  - Split into query, tx cli
Signed-off-by: grimadas <bulat.nasrulin@gmail.com>

--- a/iroha-cli/CMakeLists.txt
+++ b/iroha-cli/CMakeLists.txt
@@ -1,5 +1,23 @@
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
+add_subdirectory(interactive)
+# GenesisBlockClient
+add_library(genesis_block_client genesis_block_client_impl.cpp)
+target_link_libraries(genesis_block_client
+    endpoint
+    optional
+    model
+    )
+
+# BootstrapNetwork
+add_library(bootstrap_network bootstrap_network.cpp)
+target_link_libraries(bootstrap_network
+    genesis_block_client
+    rapidjson
+    model
+    ip_tools
+    )
+
 # Gflags config validators
 add_library(cli-flags_validators
     validators.cpp
@@ -21,9 +39,14 @@ add_library(client
     impl/query_response_handler.cpp
     impl/transaction_response_handler.cpp
     impl/grpc_response_handler.cpp
-    impl/interactive_cli.cpp
     )
 target_link_libraries(client
+    interactive_cli
+    model_converters
+    crypto
+    optional
+    logger
+    rapidjson
     pb_model_converters
     json_model_converters
     model_generators
