Separate command validation and execution logic from command model: - Create CommandExecutor class for each command with validation and execution methods - Create factory for executors with registry validation - Move CommandExecutorFactory to TemporaryWsv, MutableStorage, and TestStorage. Validation and execution is performed in these classes - Remove execution and validation loops from StatefulValidator, ChainValidator, GenesisBlockProcessor, and BlockInserter - Remove TemporaryWsv test from AmetsuchiTest, which operated on empty ledger
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/irohad/model/CMakeLists.txt
+++ b/irohad/model/CMakeLists.txt
@@ -3,8 +3,6 @@ add_subdirectory(generators)
 add_library(model
     model_crypto_provider_impl.cpp
     model_hash_provider_impl.cpp
-    impl/stateful_command_validation.cpp
-    impl/command_execution.cpp
     impl/model_operators.cpp
     converters/impl/pb_block_factory.cpp
     converters/impl/pb_transaction_factory.cpp
@@ -47,4 +45,12 @@ target_include_directories(model_registrations INTERFACE
     )
 target_link_libraries(model_registrations INTERFACE
     model
+    )
+
+add_library(command_execution
+    execution/impl/command_executor.cpp
+    execution/impl/command_executor_factory.cpp
+    )
+target_link_libraries(command_execution
+    ametsuchi
     )
