CMake dependencies refactoring: - Add ExternalProject for PostgreSQL libpq - Move each dependency to separate file
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/irohad/ordering/CMakeLists.txt
+++ b/irohad/ordering/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library(ordering_service
 target_link_libraries(ordering_service
     rxcpp
     optional
-    TBB::tbb
+    tbb
     model
     uvw
     grpc++
