Move ed25519 library to repository: - orlp/ed25519 commit 7fa6712 with luca3104/ed25519 commit aef9ac4
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/libs/crypto/CMakeLists.txt
+++ b/libs/crypto/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(ed25519)
+
 add_library(hash
     hash.cpp
     )
@@ -15,6 +17,6 @@ target_link_libraries(crypto
     )
 
 add_library(lookup3
-        lookup3.h
-        lookup3.c
-        )
+    lookup3.h
+    lookup3.c
+    )
