--- a/irohad/main/CMakeLists.txt
+++ b/irohad/main/CMakeLists.txt
@@ -22,18 +22,10 @@ target_link_libraries(server_runner
     schema
     )
 
-add_library(genesis_block_server
-    genesis_block_server/genesis_block_server.cpp
-    genesis_block_server/genesis_block_processor.cpp
-    impl/raw_block_insertion.cpp
-    )
-target_link_libraries(genesis_block_server
-    model
-    timer
-    endpoint
-    optional
-    logger
-    )
+add_library(raw_block_insertion impl/raw_block_insertion.cpp)
+target_link_libraries(raw_block_insertion
+  model #json_model_converters
+  )
 
 add_library(application
     application.cpp
@@ -62,7 +54,7 @@ target_link_libraries(application
 add_executable(irohad irohad.cpp)
 target_link_libraries(irohad
     application
-    genesis_block_server
+    raw_block_insertion
     gflags
     rapidjson
     config
