Add support for dynamic docker project name
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     ports:
       - "50051:50051"
     environment:
-      - IROHA_POSTGRES_HOST=iroha_postgres_1
+      - IROHA_POSTGRES_HOST=${COMPOSE_PROJECT_NAME}_postgres_1
       - IROHA_POSTGRES_PORT=5432
       - IROHA_POSTGRES_USER=iroha
       - IROHA_POSTGRES_PASSWORD=helloworld
-      - IROHA_REDIS_HOST=iroha_redis_1
+      - IROHA_REDIS_HOST=${COMPOSE_PROJECT_NAME}_redis_1
       - IROHA_REDIS_PORT=6379
       - CCACHE_DIR=/tmp/ccache
     depends_on:
