Remove BlockQuery inheritance from Storage
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/irohad/ametsuchi/CMakeLists.txt
+++ b/irohad/ametsuchi/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(ametsuchi
     impl/postgres_wsv_query.cpp
     impl/postgres_wsv_command.cpp
     impl/peer_query_wsv.cpp
+
+    impl/flat_file_block_query.cpp
     )
 
 target_link_libraries(ametsuchi
