--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: notify upsource that about current build
+          name: notify upsource about current build
           command: |
             python3 .circleci/upsource-webhook.py --in-progress
       - run:
