--- a/irohad/main/CMakeLists.txt
+++ b/irohad/main/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(server_runner
 
 add_library(raw_block_insertion impl/raw_block_insertion.cpp)
 target_link_libraries(raw_block_insertion
-  model #json_model_converters
+  model json_model_converters
   )
 
 add_library(application
