--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,4 @@ SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test_bin)
 add_subdirectory(module)
 add_subdirectory(framework)
 add_subdirectory(integration)
+add_subdirectory(libiroha)
