Amount stubs, add boost
Signed-off-by: kamilsa <kamilsa16@gmail.com>

--- a/test/module/libs/CMakeLists.txt
+++ b/test/module/libs/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_BUILD_TYPE Debug)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test_bin)
 
 # Reusable tests
+add_subdirectory(amount)
 add_subdirectory(crypto)
 add_subdirectory(datetime)
 add_subdirectory(map_queue)
