Add CMakeCache.txt and CMakeFiles directory to gitignore
Signed-off-by: Sudheesh Singanamalla <sudheesh1995@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ build/*
 *xcworkspace*
 *cmake-build-debug*
 CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles/*
 cmake-build-debu/*
 docker/build/iroha.tar
 cmake-build-debug/*
