--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(generator STATIC generator.cpp)
+add_library(generator generator.cpp)
+target_link_libraries(generator
+    common
+    )
