Mac build: - Fix build and link of external shared libraries - Fix CMake target link libraries - Fix bad reference in yac gate impl - Fix includes - Fix type deduction in make_test_subscriber
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/iroha-cli/interactive/CMakeLists.txt
+++ b/iroha-cli/interactive/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(interactive_cli
 target_link_libraries(interactive_cli
     model
     parser
+    client
     )
 target_include_directories(interactive_cli PUBLIC
     ${PROJECT_SOURCE_DIR}/iroha-cli
